@@ -485,6 +485,48 @@ namespace mscl
         static const bool REGISTERED;
     };
 
+    //Class: FieldParser_GnssSBASCorrection
+    //    The field parser for GNSS calculated SBAS Correction
+    class FieldParser_GnssSBASCorrection : public MipGnssFieldParser
+    {
+        //Constants: Valid Flag Bitmasks
+        //
+        //    UDREI_VALID                  - 0x01 - UDREI flag mask
+        //    PSEUDORANGE_CORRECTION_VALID - 0x02 - Pseudorange Correction flag mask
+        //    IONOSPHERIC_CORRECTION_VALID - 0x04 - Ionospheric Correction flag mask
+        static constexpr uint16 UDREI_VALID                  = 0x01; // UDREI flag mask
+        static constexpr uint16 PSEUDORANGE_CORRECTION_VALID = 0x02; // Pseudorange Correction flag mask
+        static constexpr uint16 IONOSPHERIC_CORRECTION_VALID = 0x04; // Ionospheric Correction flag mask
+
+        //Constructor: FieldParser_GnssSBASCorrection
+        //    Default constructor disabled
+        FieldParser_GnssSBASCorrection() {}
+
+    public:
+        //Function: parse
+        //    Parses a <MipDataField> for <MipDataPoints> and stores them in the valid or invalid result vectors
+        //
+        //Parameters:
+        //    field - The <MipDataField> to parse for data points
+        //    result - The <MipDataPoints> vector to store the data points in
+        void parse(const MipDataField& field, MipDataPoints& result) const override;
+
+        //Function: registerParser
+        //    The static function that registers this parser with the list of parsers (called immediately)
+        //
+        //Returns:
+        //    True, just for assigning the REGISTERED constant to true
+        static bool registerParser();
+
+        //Constant: FIELD_TYPE
+        //    The 2-byte field type (Descriptor ID + Field ID) for this parser
+        static const MipTypes::ChannelField FIELD_TYPE;
+
+        //Constant: REGISTERED
+        //    Whether this parser is registered. This will always be true. This is used to call registerParser() immediately
+        static const bool REGISTERED;
+    };
+
     //Class: FieldParser_GnssSatelliteStatus
     //    The field parser for GNSS Satellite Status data
     class FieldParser_GnssSatelliteStatus : public MipGnssFieldParser
