@@ -409,6 +409,7 @@ namespace mscl
         //  CH_FIELD_GNSS_CLOCK_INFO_2                              - 0x8110    - GNSS Clock Info 2
         //  CH_FIELD_GNSS_GPS_LEAP_SECONDS                          - 0x8111    - GNSS GPS Leap Seconds
         //  CH_FIELD_GNSS_SBAS_INFO                                 - 0x8112    - GNSS SBAS Info
+        //  CH_FIELD_GNSS_SBAS_CORRECTION                           - 0x8113    - GNSS SBAS Correction
         //  CH_FIELD_GNSS_SATELLITE_STATUS                          - 0x8120    - GNSS Satellite Status
         //  CH_FIELD_GNSS_RAW_OBSERVATION                           - 0x8122    - GNSS Raw Observation data
         //  CH_FIELD_GNSS_STATION_INFO                              - 0x8130    - GNSS Base Station Info
@@ -508,6 +509,7 @@ namespace mscl
         //  CH_FIELD_GNSS_1_CLOCK_INFO_2                            - 0x9110    - GNSS 1 Clock Info 2
         //  CH_FIELD_GNSS_1_GPS_LEAP_SECONDS                        - 0x9111    - GNSS 1 GPS Leap Seconds
         //  CH_FIELD_GNSS_1_SBAS_INFO                               - 0x9112    - GNSS 1 SBAS Info
+        //  CH_FIELD_GNSS_1_SBAS_CORRECTION                         - 0x9113    - GNSS 1 SBAS Correction
         //  CH_FIELD_GNSS_1_SATELLITE_STATUS                        - 0x9120    - GNSS 1 Satellite Status
         //  CH_FIELD_GNSS_1_RAW_OBSERVATION                         - 0x9122    - GNSS 1 Raw Observation data
         //  CH_FIELD_GNSS_1_STATION_INFO                            - 0x9130    - GNSS 1 Base Station Info
@@ -542,6 +544,7 @@ namespace mscl
         //  CH_FIELD_GNSS_2_CLOCK_INFO_2                            - 0x9210    - GNSS 2 Clock Info 2
         //  CH_FIELD_GNSS_2_GPS_LEAP_SECONDS                        - 0x9211    - GNSS 2 GPS Leap Seconds
         //  CH_FIELD_GNSS_2_SBAS_INFO                               - 0x9212    - GNSS 2 SBAS Info
+        //  CH_FIELD_GNSS_2_SBAS_CORRECTION                         - 0x9213    - GNSS 2 SBAS Correction
         //  CH_FIELD_GNSS_2_SATELLITE_STATUS                        - 0x9220    - GNSS 2 Satellite Status
         //  CH_FIELD_GNSS_2_RAW_OBSERVATION                         - 0x9222    - GNSS 2 Raw Observation data
         //  CH_FIELD_GNSS_2_STATION_INFO                            - 0x9230    - GNSS 2 Base Station Info
@@ -576,6 +579,7 @@ namespace mscl
         //  CH_FIELD_GNSS_3_CLOCK_INFO_2                            - 0x9310    - GNSS 3 Clock Info 2
         //  CH_FIELD_GNSS_3_GPS_LEAP_SECONDS                        - 0x9311    - GNSS 3 GPS Leap Seconds
         //  CH_FIELD_GNSS_3_SBAS_INFO                               - 0x9312    - GNSS 3 SBAS Info
+        //  CH_FIELD_GNSS_3_SBAS_CORRECTION                         - 0x9313    - GNSS 3 SBAS Correction
         //  CH_FIELD_GNSS_3_SATELLITE_STATUS                        - 0x9320    - GNSS 3 Satellite Status
         //  CH_FIELD_GNSS_3_RAW_OBSERVATION                         - 0x9322    - GNSS 3 Raw Observation data
         //  CH_FIELD_GNSS_3_STATION_INFO                            - 0x9330    - GNSS 3 Base Station Info
@@ -610,6 +614,7 @@ namespace mscl
         //  CH_FIELD_GNSS_4_CLOCK_INFO_2                            - 0x9410    - GNSS 4 Clock Info 2
         //  CH_FIELD_GNSS_4_GPS_LEAP_SECONDS                        - 0x9411    - GNSS 4 GPS Leap Seconds
         //  CH_FIELD_GNSS_4_SBAS_INFO                               - 0x9412    - GNSS 4 SBAS Info
+        //  CH_FIELD_GNSS_4_SBAS_CORRECTION                         - 0x9413    - GNSS 4 SBAS Correction
         //  CH_FIELD_GNSS_4_SATELLITE_STATUS                        - 0x9420    - GNSS 4 Satellite Status
         //  CH_FIELD_GNSS_4_RAW_OBSERVATION                         - 0x9422    - GNSS 4 Raw Observation data
         //  CH_FIELD_GNSS_4_STATION_INFO                            - 0x9430    - GNSS 4 Base Station Info
@@ -644,6 +649,7 @@ namespace mscl
         //  CH_FIELD_GNSS_5_CLOCK_INFO_2                            - 0x9510    - GNSS 5 Clock Info 2
         //  CH_FIELD_GNSS_5_GPS_LEAP_SECONDS                        - 0x9511    - GNSS 5 GPS Leap Seconds
         //  CH_FIELD_GNSS_5_SBAS_INFO                               - 0x9512    - GNSS 5 SBAS Info
+        //  CH_FIELD_GNSS_5_SBAS_CORRECTION                         - 0x9513    - GNSS 5 SBAS Correction
         //  CH_FIELD_GNSS_5_SATELLITE_STATUS                        - 0x9520    - GNSS 5 Satellite Status
         //  CH_FIELD_GNSS_5_RAW_OBSERVATION                         - 0x9522    - GNSS 5 Raw Observation data
         //  CH_FIELD_GNSS_5_STATION_INFO                            - 0x9530    - GNSS 5 Base Station Info
@@ -724,6 +730,7 @@ namespace mscl
             CH_FIELD_GNSS_CLOCK_INFO_2                              = 0x8110,
             CH_FIELD_GNSS_GPS_LEAP_SECONDS                          = 0x8111,
             CH_FIELD_GNSS_SBAS_INFO                                 = 0x8112,
+            CH_FIELD_GNSS_SBAS_CORRECTION                           = 0x8113,
             CH_FIELD_GNSS_SATELLITE_STATUS                          = 0x8120,
             CH_FIELD_GNSS_RAW_OBSERVATION                           = 0x8122,
             CH_FIELD_GNSS_STATION_INFO                              = 0x8130,
@@ -823,6 +830,7 @@ namespace mscl
             CH_FIELD_GNSS_1_CLOCK_INFO_2                            = 0x9110,
             CH_FIELD_GNSS_1_GPS_LEAP_SECONDS                        = 0x9111,
             CH_FIELD_GNSS_1_SBAS_INFO                               = 0x9112,
+            CH_FIELD_GNSS_1_SBAS_CORRECTION                         = 0x9113,
             CH_FIELD_GNSS_1_SATELLITE_STATUS                        = 0x9120,
             CH_FIELD_GNSS_1_RAW_OBSERVATION                         = 0x9122,
             CH_FIELD_GNSS_1_STATION_INFO                            = 0x9130,
@@ -857,6 +865,7 @@ namespace mscl
             CH_FIELD_GNSS_2_CLOCK_INFO_2                            = 0x9210,
             CH_FIELD_GNSS_2_GPS_LEAP_SECONDS                        = 0x9211,
             CH_FIELD_GNSS_2_SBAS_INFO                               = 0x9212,
+            CH_FIELD_GNSS_2_SBAS_CORRECTION                         = 0x9213,
             CH_FIELD_GNSS_2_SATELLITE_STATUS                        = 0x9220,
             CH_FIELD_GNSS_2_RAW_OBSERVATION                         = 0x9222,
             CH_FIELD_GNSS_2_STATION_INFO                            = 0x9230,
@@ -891,6 +900,7 @@ namespace mscl
             CH_FIELD_GNSS_3_CLOCK_INFO_2                            = 0x9310,
             CH_FIELD_GNSS_3_GPS_LEAP_SECONDS                        = 0x9311,
             CH_FIELD_GNSS_3_SBAS_INFO                               = 0x9312,
+            CH_FIELD_GNSS_3_SBAS_CORRECTION                         = 0x9313,
             CH_FIELD_GNSS_3_SATELLITE_STATUS                        = 0x9320,
             CH_FIELD_GNSS_3_RAW_OBSERVATION                         = 0x9322,
             CH_FIELD_GNSS_3_STATION_INFO                            = 0x9330,
@@ -925,6 +935,7 @@ namespace mscl
             CH_FIELD_GNSS_4_CLOCK_INFO_2                            = 0x9410,
             CH_FIELD_GNSS_4_GPS_LEAP_SECONDS                        = 0x9411,
             CH_FIELD_GNSS_4_SBAS_INFO                               = 0x9412,
+            CH_FIELD_GNSS_4_SBAS_CORRECTION                         = 0x9413,
             CH_FIELD_GNSS_4_SATELLITE_STATUS                        = 0x9420,
             CH_FIELD_GNSS_4_RAW_OBSERVATION                         = 0x9422,
             CH_FIELD_GNSS_4_STATION_INFO                            = 0x9430,
@@ -959,6 +970,7 @@ namespace mscl
             CH_FIELD_GNSS_5_CLOCK_INFO_2                            = 0x9510,
             CH_FIELD_GNSS_5_GPS_LEAP_SECONDS                        = 0x9511,
             CH_FIELD_GNSS_5_SBAS_INFO                               = 0x9512,
+            CH_FIELD_GNSS_5_SBAS_CORRECTION                         = 0x9513,
             CH_FIELD_GNSS_5_SATELLITE_STATUS                        = 0x9520,
             CH_FIELD_GNSS_5_RAW_OBSERVATION                         = 0x9522,
             CH_FIELD_GNSS_5_STATION_INFO                            = 0x9530,
@@ -1113,6 +1125,9 @@ namespace mscl
         //    CH_VALID_FLAGS                - 112 - Valid Flags
         //    CH_PPS_VALID                  - 113 - PPS Valid
         //    CH_LAST_PPS                   - 114 - Last PPS Received
+        //    CH_UDREI                      - 115 - User Differential Range Error Index
+        //    CH_PSEUDORANGE_CORRECTION     - 116 - Pseudorange Correction
+        //    CH_IONOSPHERIC_CORRECTION     - 117 - Ionospheric Correction
         //====================================================================================================
         enum ChannelQualifier
         {
@@ -1228,7 +1243,10 @@ namespace mscl
             CH_NANOSECONDS                = 111,
             CH_VALID_FLAGS                = 112,
             CH_PPS_VALID                  = 113,
-            CH_LAST_PPS                   = 114
+            CH_LAST_PPS                   = 114,
+            CH_UDREI                      = 115,
+            CH_PSEUDORANGE_CORRECTION     = 116,
+            CH_IONOSPHERIC_CORRECTION     = 117
         };
 
         //API Typedefs:
