@@ -326,6 +326,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_CLOCK_INFO_2 = 0x8110,
     CH_FIELD_GNSS_GPS_LEAP_SECONDS = 0x8111,
     CH_FIELD_GNSS_SBAS_INFO = 0x8112,
+    CH_FIELD_GNSS_SBAS_CORRECTION = 0x8113,
     CH_FIELD_GNSS_SATELLITE_STATUS = 0x8120,
     CH_FIELD_GNSS_RAW_OBSERVATION = 0x8122,
     CH_FIELD_GNSS_STATION_INFO = 0x8130,
@@ -425,6 +426,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_1_CLOCK_INFO_2 = 0x9110,
     CH_FIELD_GNSS_1_GPS_LEAP_SECONDS = 0x9111,
     CH_FIELD_GNSS_1_SBAS_INFO = 0x9112,
+    CH_FIELD_GNSS_1_SBAS_CORRECTION = 0x9113,
     CH_FIELD_GNSS_1_SATELLITE_STATUS = 0x9120,
     CH_FIELD_GNSS_1_RAW_OBSERVATION = 0x9122,
     CH_FIELD_GNSS_1_STATION_INFO = 0x9130,
@@ -459,6 +461,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_2_CLOCK_INFO_2 = 0x9210,
     CH_FIELD_GNSS_2_GPS_LEAP_SECONDS = 0x9211,
     CH_FIELD_GNSS_2_SBAS_INFO = 0x9212,
+    CH_FIELD_GNSS_2_SBAS_CORRECTION = 0x9213,
     CH_FIELD_GNSS_2_SATELLITE_STATUS = 0x9220,
     CH_FIELD_GNSS_2_RAW_OBSERVATION = 0x9222,
     CH_FIELD_GNSS_2_STATION_INFO = 0x9230,
@@ -493,6 +496,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_3_CLOCK_INFO_2 = 0x9310,
     CH_FIELD_GNSS_3_GPS_LEAP_SECONDS = 0x9311,
     CH_FIELD_GNSS_3_SBAS_INFO = 0x9312,
+    CH_FIELD_GNSS_3_SBAS_CORRECTION = 0x9313,
     CH_FIELD_GNSS_3_SATELLITE_STATUS = 0x9320,
     CH_FIELD_GNSS_3_RAW_OBSERVATION = 0x9322,
     CH_FIELD_GNSS_3_STATION_INFO = 0x9330,
@@ -527,6 +531,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_4_CLOCK_INFO_2 = 0x9410,
     CH_FIELD_GNSS_4_GPS_LEAP_SECONDS = 0x9411,
     CH_FIELD_GNSS_4_SBAS_INFO = 0x9412,
+    CH_FIELD_GNSS_4_SBAS_CORRECTION = 0x9413,
     CH_FIELD_GNSS_4_SATELLITE_STATUS = 0x9420,
     CH_FIELD_GNSS_4_RAW_OBSERVATION = 0x9422,
     CH_FIELD_GNSS_4_STATION_INFO = 0x9430,
@@ -561,6 +566,7 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_5_CLOCK_INFO_2 = 0x9510,
     CH_FIELD_GNSS_5_GPS_LEAP_SECONDS = 0x9511,
     CH_FIELD_GNSS_5_SBAS_INFO = 0x9512,
+    CH_FIELD_GNSS_5_SBAS_CORRECTION = 0x9513,
     CH_FIELD_GNSS_5_SATELLITE_STATUS = 0x9520,
     CH_FIELD_GNSS_5_RAW_OBSERVATION = 0x9522,
     CH_FIELD_GNSS_5_STATION_INFO = 0x9530,
@@ -707,7 +713,10 @@ public class MipTypes : global::System.IDisposable {
     CH_NANOSECONDS = 111,
     CH_VALID_FLAGS = 112,
     CH_PPS_VALID = 113,
-    CH_LAST_PPS = 114
+    CH_LAST_PPS = 114,
+    CH_UDREI = 115,
+    CH_PSEUDORANGE_CORRECTION = 116,
+    CH_IONOSPHERIC_CORRECTION = 117
   }
 
 }
